--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 
 Django>=4.2,<5.3
 djangorestframework>=3.14
-gunicorn>=21.2
-whitenoise>=6.6
 django-cors-headers>=4.3
+whitenoise>=6.6
+gunicorn>=21.2
+psycopg2-binary>=2.9
