--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-
 Django>=4.2,<5.3
 djangorestframework>=3.14
 django-cors-headers>=4.3
@@ -6,3 +5,4 @@ gunicorn>=21.2
 whitenoise>=6.6
 psycopg2-binary>=2.9.9
 dj-database-url>=2.1.0
+pgvector>=0.4.2
